--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<p>This document covers the installation and use of this theme and often reveals answers to common
 						problems and issues - read this document thoroughly if you are experiencing any difficulties. If
 						you have any questions that are beyond the scope of this document, feel free to email at
-						<code><a href="mailto:wedevslab@gmail.com">wedevslab@gmail.com</a></code> Thank you so much!</p>
+						<code><a href="mailto:devscorn@gmail.com">devscorn@gmail.com</a></code> Thank you so much!</p>
 				</div>
 				<div class="features">
 					<h2 class="twenty">Template Features</h2>
@@ -404,7 +404,7 @@
 				</div>
 			</section>
 			<footer>
-				Contact @ <a href="mailto:wedevslab@gmail.com" target="_top">wedevslab</a>
+				Contact @ <a href="mailto:devscorn@gmail.com" target="_top">devscorn</a>
 			</footer>
 		</div>
 	</div>
