--- a/index.html
+++ b/index.html
@@ -287,14 +287,14 @@
 					</h4>
 					<div class="p-l-20">
 						<p>
-							In this folder , you will find the pages folder of next js and next configuration files.
-							If you want to change something in next js folder , change here .
+							In this folder , you will find the pages folder of gatsby js and gatsby configuration files.
+							If you want to change something in gatsby folder , change here .
 						</p>
 						<h4 class="mini-sub-title">
 							pages
 						</h4>
 						<p>
-							As we have used next.js , we have a script to your package.json like this:
+							As we have used gatsby, we have a script to your package.json like this:
 						</p>
 						<pre class="brush: html">
 							"scripts": {
@@ -312,7 +312,7 @@
 							automatically processed and rendered.<br />
 	
 							Please have a look at this link <a target="_blank"
-								href="https://nextjs.org/docs/">https://nextjs.org/docs/ </a> for a quick look. You will
+								href="https://www.gatsbyjs.com/">https://www.gatsbyjs.com/ </a> for a quick look. You will
 							understand the basic things so quickly.<br />
 	
 							As we have Three landing pages and three blog pages named index, classic, modern, blog-grid,
