--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 				<p class="content-list">
 					Then , please go to address localhost:3000 on your browser and You will find default landing
 					page.<br />Similarly <br />
-					localhost:3000/ for Default Home Page </br>
-					localhost:3000/home-two for Home-two Page </br>
-					localhost:3000/home-three for Home-three Page </br>
-					localhost:3000/home-four for Home-four Page </br>
-					localhost:3000/blog-full for Blog-Grid full </br>
-					localhost:3000/home-four for Home-four Page </br>
+					localhost:3000/ for Default Landing</br>
+					localhost:3000/classic for Classic Landing</br>
+					localhost:3000/modern for Modern Landing</br>
+					localhost:3000/hosting for Hosting Landing </br>
+					localhost:3000/crypto for Crypto Landing </br>
+					localhost:3000/blog-full for Blog-Grid Full Page </br>
 					localhost:3000/blog-grid for Blog-Grid Page </br>
 					localhost:3000/blog-list for Blog-List Page </br>
 					localhost:3000/blog-single for Blog-Single Page </br>
@@ -123,11 +123,12 @@
 				<p class="content-list">
 					Then , please go to address localhost:8000 on your browser and You will find default landing
 					page.<br />Similarly <br />
-					localhost:8000/ for Default Home Page </br>
-					localhost:8000/home-two for Home-two Page </br>
-					localhost:8000/home-three for Home-three Page </br>
-					localhost:8000/home-four for Home-four Page </br>
-					localhost:8000/blog-full for Blog-full Page </br>
+					localhost:8000/ for Default Landing</br>
+					localhost:8000/classic for Classic Landing</br>
+					localhost:8000/modern for Modern Landing</br>
+					localhost:8000/hosting for Hosting Landing </br>
+					localhost:8000/crypto for Crypto Landing </br>
+					localhost:8000/blog-full for Blog-Grid full </br>
 					localhost:8000/blog-grid for Blog-Grid Page </br>
 					localhost:8000/blog-list for Blog-List Page </br>
 					localhost:8000/blog-single for Blog-Single Page </br>
@@ -287,14 +288,14 @@
 					</h4>
 					<div class="p-l-20">
 						<p>
-							In this folder , you will find the pages folder of gatsby js and gatsby configuration files.
-							If you want to change something in gatsby folder , change here .
+							In this folder , you will find the pages folder of next js and next configuration files.
+							If you want to change something in next js folder , change here .
 						</p>
 						<h4 class="mini-sub-title">
 							pages
 						</h4>
 						<p>
-							As we have used gatsby, we have a script to your package.json like this:
+							As we have used next.js , we have a script to your package.json like this:
 						</p>
 						<pre class="brush: html">
 							"scripts": {
@@ -312,7 +313,7 @@
 							automatically processed and rendered.<br />
 	
 							Please have a look at this link <a target="_blank"
-								href="https://www.gatsbyjs.com/">https://www.gatsbyjs.com/ </a> for a quick look. You will
+								href="https://nextjs.org/docs/">https://nextjs.org/docs/ </a> for a quick look. You will
 							understand the basic things so quickly.<br />
 	
 							As we have Three landing pages and three blog pages named index, classic, modern, blog-grid,
